# albatross

./: .gitignore  Cargo.toml  README.md
crates/albatross/: Cargo.toml
crates/albatross/src/: bsp.rs  collision.rs  lib.rs  macros.rs  primitive.rs
crates/albatross/src/bsp/: __test.rs  optimize.rs  trace.rs
crates/bitworks/: Cargo.toml
crates/bitworks/src/: lib.rs
crates/timer-wheel/: Cargo.toml
crates/tm-wheel/: Cargo.toml  README.md
crates/tm-wheel/benches/: many.rs
crates/tm-wheel/src/: lib.rs
crates/var-grid/: Cargo.toml
crates/var-grid/src/: lib.rs
examples/bsp-ui/: Cargo.toml  README.md  index.html  rust-toolchain.toml
examples/bsp-ui/src/: app.rs  main.rs
examples/bsp-ui/src/app/: boids.rs
src/: bitindex.rs  bits.rs  bsp.rs  collision.rs  lib.rs  macros.rs  packed.rs  primitive.rs  var_grid.rs
src/bsp/: __test.rs  optimize.rs  trace.rs
src/packed/: glam_impls.rs  glam_rotation.rs
