[package]
name = "albatross"
description = "Set of algorithms for personal usage."
version = "0.1.0"
edition = "2021"

[dependencies]
slotmap = "1"
slab = "0.4"

tap = "1"
fixed = { version = "1", features = ["num-traits"], optional = true }

num = "0.4"
thiserror = "1"

derive_more = { version = "1.0.0-beta", features = ["full"] }
enum-as-inner = "0.6"

typenum = "1"

nalgebra = { version = "0.32", optional = true }
glam = { version = "0.25", optional = true, features = ["serde"] }

serde = { version = "1", optional = true, features = ["derive"] }
bevy_reflect = { version = "0.13", optional = true, features = ["bevy_math"] }

static_assertions = "1"

[features]
reflect = ["dep:bevy_reflect"]
