[workspace]
resolver = "2"
members = [
    "crates/albatross",
    "crates/bitworks",
    "crates/var-grid",
    "crates/tm-wheel",
]
exclude = ["examples/bsp-ui"]

[workspace.dependencies]
albatross = { path = "crates/albatross" }
bitworks = { path = "crates/bitworks", package = "albatross-bitworks" }
var-grid = { path = "crates/var-grid", package = "albatross-var-grid" }
tm-wheel = { path = "crates/tm-wheel" }

# ································································································ #

slotmap = "1"
slab = "0.4"

fixed = { version = "1", features = ["num-traits"] }

tap = "1"
ahash = "0.8"
bitvec = "1"
nd = { version = "0.16", package = "ndarray" }

num = "0.4"
thiserror = "2"

derive_more = { version = "1.0.0", features = ["full"] }
enum-as-inner = "0.6"

typenum = "1"

nalgebra = { version = "0.33" }
glam = { version = "0.29", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
static_assertions = "1"
